# TheGameOfLife

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE.txt
licenses/: README.md
src/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
src/Console/: Console.cpp  Console.hpp
src/Core/: Game.cpp  Game.hpp
src/Graphics/Shapes/: RoundedRectangle.cpp  RoundedRectangle.hpp
src/Modules/: Console.ixx  GameConsole.cppm  GameConsole.ixx  GameMenus.cppm  GameMenus.ixx  GameSetup.cppm  GameSetup.ixx
